crates/nirvash-macros/tests/fixtures/registered_property_closure_reject.stderr
error: registered properties must be built from AST-native nirvash_expr!/nirvash_step_expr! nodes
  --> tests/fixtures/registered_property_closure_reject.rs:37:52
   |
37 |   fn bad_property() -> ::nirvash::Ltl<State, Action> {
   |  ____________________________________________________^
38 | |     ::nirvash::Ltl::pred(::nirvash::BoolExpr::new("bad_property", |_| true))
39 | | }
   | |_^
