crates/nirvash-macros/tests/fixtures/registered_property_closure_reject.rs
use nirvash::TransitionSystem;
use nirvash_macros::{Signature as FormalSignature, property, subsystem_spec};

#[derive(Clone, Copy, Debug, PartialEq, Eq, FormalSignature)]
enum State {
    Idle,
}

#[derive(Clone, Copy, Debug, PartialEq, Eq, FormalSignature)]
enum Action {
    Tick,
}

struct Spec;

#[subsystem_spec]
impl TransitionSystem for Spec {
    type State = State;
    type Action = Action;

    fn initial_states(&self) -> Vec<Self::State> {
        vec![State::Idle]
    }

    fn actions(&self) -> Vec<Self::Action> {
        vec![Action::Tick]
    }

    fn transition_program(
        &self,
    ) -> Option<::nirvash::TransitionProgram<Self::State, Self::Action>> {
        Some(::nirvash::TransitionProgram::named("spec", vec![]))
    }
}

#[property(Spec)]
fn bad_property() -> ::nirvash::Ltl<State, Action> {
    ::nirvash::Ltl::pred(::nirvash::BoolExpr::new("bad_property", |_| true))
}

fn main() {}
